infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-django
  namespace: iam-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - iam-api.clet.gov.gh
      secretName: iam-api-tls
  rules:
    - host: iam-api.clet.gov.gh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iam-django
                port:
                  number: 8000
